--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,3 +1,11 @@
 
+    </div> <!-- End container fluid-->
+
+    <footer>
+      <section>
+        <a href="/">Home</a>     |     <a href="/login">Login</a>     |     <a href="/about">About</a>
+      </section>
+    </footer>
+
   </body>
 </html>
