--- a/views/header.ejs
+++ b/views/header.ejs
@@ -8,3 +8,12 @@
     <link rel="icon" type="image/png" href="/images/favicon.ico">
   </head>
   <body>
+  
+  <header>
+    <section>
+       <a href="/login">Login</a>
+    </section>
+  </header>
+
+    <div class="container-fluid myContainer main">
+
