--- a/views/site/showall.ejs
+++ b/views/site/showall.ejs
@@ -1,3 +1,5 @@
-<%- include header.ejs %>
+<%- include ../header.ejs %>
 
-<%- include footer.ejs %>
+  <p>Site/show all results</p>
+  
+<%- include ../footer.ejs %>
