--- a/views/user/edit.ejs
+++ b/views/user/edit.ejs
@@ -1,3 +1,15 @@
-<%- include header.ejs %>
+<%- include ../header.ejs %>
 
-<%- include footer.ejs %>
+  
+<div class="row signup">
+  <section>
+
+
+
+
+
+  </section>
+</div>
+
+
+<%- include ../footer.ejs %>
