--- a/views/user/profile.ejs
+++ b/views/user/profile.ejs
@@ -1,3 +1,5 @@
-<%- include header.ejs %>
+<%- include ../header.ejs %>
 
-<%- include footer.ejs %>
+  <p>User/Profile</p>
+  
+<%- include ../footer.ejs %>
