--- a/views/site/about.ejs
+++ b/views/site/about.ejs
@@ -1,3 +1,10 @@
-<%- include header.ejs %>
+<%- include ../header.ejs %>
 
-<%- include footer.ejs %>
+  <p>Site/about</p>
+  <div class="row">
+    <div class="col-md-4 col-xs-12"></div>
+    <div class="col-md-8 col-xs-12">Bacon ipsum dolor sit amet t-bone pork loin tongue fatback cow ham hock short loin chuck brisket swine drumstick leberkas. Landjaeger prosciutto t-bone pancetta, tri-tip porchetta bresaola beef ribs turkey. Shankle prosciutto strip steak meatball jerky. Fatback rump t-bone kielbasa shank. Tail capicola kielbasa, chuck shank boudin chicken ball tip shoulder hamburger cow ribeye ham hock.
+
+Ham hock turducken venison ribeye, jerky sirloin andouille strip steak prosciutto. Ham hock frankfurter t-bone, capicola porchetta tenderloin pork chop biltong jowl landjaeger rump pastrami short loin drumstick. Ribeye turkey tenderloin pancetta. Corned beef bacon kielbasa tri-tip t-bone tenderloin pork belly chicken. Shank tri-tip tail jerky leberkas andouille. Pork chop t-bone frankfurter swine jerky tri-tip brisket short ribs shank doner porchetta pig. Strip steak pork chop beef jowl, sausage bacon pork belly andouille sirloin jerky porchetta tail tri-tip venison rump.</div>
+  </div>
+<%- include ../footer.ejs %>
