--- a/views/site/login.ejs
+++ b/views/site/login.ejs
@@ -1,3 +1,40 @@
-<%- include header.ejs %>
+<%- include ../header.ejs %>
 
-<%- include footer.ejs %>
+  
+<div class="row signup">
+  <section>
+    <div class="col-md-6 col-xs-12">
+      <p>Log in page<br/>Bacon ipsum dolor sit amet tenderloin porchetta pork chop pastrami 
+        corned beef kielbasa spare ribs beef ribs shoulder filet mignon.</p>
+    </div>
+
+    <div class="col-md-6 col-xs-12">
+
+      <h2>Log In</h2>
+
+      <form class="form-horizontal" role="form" method="POST" action="/home">
+        <div class="form-group">
+          <div class="col-sm-10">
+            <input type="email" class="form-control" id="loginEmail" placeholder="Email">
+          </div>
+        </div>
+        <div class="form-group">
+          <div class="col-sm-10">
+            <input type="password" class="form-control" id="loginPassword" placeholder="Password">
+          </div>
+        </div>
+
+        <div class="form-group">
+          <div class="col-sm-offset-2 col-sm-10">
+            <button type="submit" class="btn btn-default">Log in</button>
+          </div>
+        </div>
+      </form>
+      <a href="/">Not a user? Sign up now.</a>
+
+    </div>
+  </section>
+</div>
+
+
+<%- include ../footer.ejs %>
