--- a/views/site/login.ejs
+++ b/views/site/login.ejs
@@ -15,12 +15,12 @@
       <form class="form-horizontal" role="form" method="POST" action="/home">
         <div class="form-group">
           <div class="col-sm-10">
-            <input type="email" class="form-control" id="loginEmail" placeholder="Email">
+            <input type="email" class="form-control" id="loginEmail" name="email" placeholder="Email">
           </div>
         </div>
         <div class="form-group">
           <div class="col-sm-10">
-            <input type="password" class="form-control" id="loginPassword" placeholder="Password">
+            <input type="password" class="form-control" id="loginPassword" name="password" placeholder="Password">
           </div>
         </div>
 
