--- a/views/site/login.ejs
+++ b/views/site/login.ejs
@@ -12,7 +12,7 @@
 
       <h2>Log In</h2>
 
-      <form class="form-horizontal" role="form" method="POST" action="/home">
+      <form class="form-horizontal" role="form" method="POST" action="/login">
         <div class="form-group">
           <div class="col-sm-10">
             <input type="email" class="form-control" id="loginEmail" name="email" placeholder="Email">
@@ -25,7 +25,7 @@
         </div>
 
         <div class="form-group">
-          <div class="col-sm-offset-2 col-sm-10">
+          <div class="col-sm-10">
             <button type="submit" class="btn btn-default">Log in</button>
           </div>
         </div>
