adding authentication, building the edit form, building profile

--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -3,7 +3,7 @@
 
     <footer>
       <section>
-        <a href="/">Home</a>     |     <a href="/login">Login</a>     |     <a href="/about">About</a>
+        <a href="/">Home</a>     |     <a href="/login">Login</a>     |     <a href="/about">About</a>     |   <a href="/logout">Log out</a>
       </section>
     </footer>
 
