--- a/views/site/login.ejs
+++ b/views/site/login.ejs
@@ -10,7 +10,7 @@
 
     <div class="col-md-6 col-xs-12">
 
-      <h2>Log In</h2>
+      <h2>Your Profile</h2>
 
       <form class="form-horizontal" role="form" method="POST" action="/login">
         <div class="form-group">
