--- a/views/user/edit.ejs
+++ b/views/user/edit.ejs
@@ -1,15 +1,98 @@
 <%- include ../header.ejs %>
 
+<% if (!isAuthenticated) { %>
+<div class="alert alert-warning">
+  <a href="/login">You must be logged in to view this page</a>
+</div>
+<%  } else {%>
   
 <div class="row signup">
   <section>
 
+    <div class="col-md-6 col-xs-12">
+
+      <h2>Edit Your Profile</h2>
+
+      <form class="form-horizontal" role="form" method="POST" action="/edit/<%= id %>?_method=put">
+
+        <div class="form-group">
+          <div class="col-sm-10">
+            <input class="form-control" id="disabledInput" type="text" value="<%= firstname %>" disabled>
+          </div>
+        </div>
+
+        <div class="form-group">
+          <div class="col-sm-10">
+            <input class="form-control" id="disabledInput" type="text" value="<%= lastname %>" disabled>
+          </div>
+        </div>
+
+        <div class="form-group">
+          <div class="col-sm-10">
+            <input class="form-control" id="disabledInput" type="text" value="<%= email %>" disabled>
+          </div>
+        </div>
+
+        <div class="form-group">
+          <div class="col-sm-10">
+            <select name="name" class="form-control">
+              <option value="" disabled selected>Select your cohort</option>
+              <option value="8">WDI - January 2014</option>
+              <option value="3">WDI - April 2014</option>
+              <option value="1">WDI - July 2014</option>
+              <option value="2">WDI - August 2014</option>
+              <option value="5">WDI - November 2014 #1</option>
+              <option value="6">WDI - November 2014 #2</option>
+              <option value="7">UXDI - March 2014</option>
+              <option value="3">UXDI - June 2014</option>
+              <option value="4">UXDI - September 2014</option>
+            </select>
+          </div>
+        </div>
+
+        <div class="form-group">
+          <div class="col-sm-10">
+            <input type="text" class="form-control" id="website" name="website" placeholder="Website" value="<%= website %>">
+          </div>
+        </div>
+        <div class="form-group">
+          <div class="col-sm-10">
+            <input type="text" class="form-control" id="twitter" name="twitterhandle" placeholder="Twitter Handle" value="<%= twitterhandle %>">
+          </div>
+        </div>
+        <div class="form-group">
+          <div class="col-sm-10">
+            <input type="text" class="form-control" id="linkedin" name="linkedin" placeholder="LinkedIn" value="<%= linkedin %>">
+          </div>
+        </div>
+        <div class="form-group">
+          <div class="col-sm-10">
+            <textarea class="form-control" rows="5" placeholder="Bio" name="bio"><%= bio %></textarea>
+          </div>
+        </div>
+        <div class="form-group">
+          <div class="col-sm-10">
+             <textarea class="form-control" rows="3" name="addlinfo" placeholder="Additional Info, Sample work, etc"><%= addlinfo %></textarea>
+          </div>
+        </div>
+        <div class="form-group">
+          <div class="col-sm-10">
+            <button type="submit" class="btn btn-default">Edit</button>
+          </div>
+        </div>
+      </form>
 
 
+
+    </div>
+
+    <div class="col-md-6 col-xs-12">
+      
+    </div>
 
 
   </section>
 </div>
-
+<% } %>
 
 <%- include ../footer.ejs %>
