further styling, adding twitter handle to sign up

--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,9 +1,11 @@
 
     </div> <!-- End container fluid-->
 
+<a href="/logout" class="btn btn-default">Log out</a>
+
     <footer>
       <section>
-        <a href="/">Home</a>     |     <a href="/login">Login</a>     |     <a href="/about">About</a>     |   <a href="/logout">Log out</a>
+        <a href="/">Home</a>  | <a href="/login">Login</a> | <a href="/about">About</a>
       </section>
     </footer>
 
