--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>GA Student Directory</title>
+    <title>GA Connect</title>
     <link rel="stylesheet" type="text/css" href="/styles/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="/styles/styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -11,7 +11,7 @@
   
   <header>
     <section>
-       <a href="/login">Login</a>
+      <a href="/" id="logo">GA Connect</a>
     </section>
   </header>
 
