--- a/views/site/error.ejs
+++ b/views/site/error.ejs
@@ -1,9 +1,10 @@
 <%- include ../header.ejs %>
 
-  <p>Site/about</p>
   <div class="row">
-    <div class="col-md-2 col-xs-12"></div>
-    <div class="col-md-8 col-xs-12">Whoops! Something went wrong. Head <a href="/">home</a>.</div>
-    <div class="col-md-2 col-xs-12"></div>
+    <section>
+      <div class="col-md-2 col-xs-12"></div>
+      <div class="col-md-8 col-xs-12">Whoops! Something went wrong. Head <a href="/">home</a>.</div>
+      <div class="col-md-2 col-xs-12"></div>
+    </section>
   </div>
 <%- include ../footer.ejs %>
