--- a/views/site/index.ejs
+++ b/views/site/index.ejs
@@ -4,7 +4,7 @@
 <div class="row signup">
   <section>
     <div class="col-md-7 col-xs-12">
-      <p>Homepage/Sign up<br/>Bacon ipsum dolor sit amet tenderloin porchetta pork chop pastrami 
+      <p>Bacon ipsum dolor sit amet tenderloin porchetta pork chop pastrami 
         corned beef kielbasa spare ribs beef ribs shoulder filet mignon.</p>
     </div>
 
@@ -13,29 +13,53 @@
       <h2>Sign Up Now</h2>
 
       <form class="form-horizontal" role="form" method="POST" action="/create">
-        <div class="form-group">
-          <div class="col-sm-10">
-            <input type="text" class="form-control firstname" id="firstname" name="firstname" placeholder="First Name">
+     
+
+
+
+
+      <div class="row">
+        <div class="col-md-6 col-xs-12">
+
+          <div class="form-group">
+            <div class="col-sm-12">
+              <input type="text" class="form-control firstname" id="firstname" name="firstname" placeholder="First Name" autofocus>
+            </div>
           </div>
+
         </div>
-        <div class="form-group">
-          <div class="col-sm-10">
-            <input type="text" class="form-control lastname" id="lastname" name="lastname" placeholder="Last Name">
+
+        <div class="col-md-6 col-xs-12">
+
+          <div class="form-group">
+            <div class="col-sm-12">
+              <input type="text" class="form-control lastname" id="lastname" name="lastname" placeholder="Last Name">
+            </div>
           </div>
+
         </div>
+      </div>
+
+
+
         <div class="form-group">
-          <div class="col-sm-10">
+          <div class="col-sm-12">
             <input type="email" class="form-control email" id="email" name="email" placeholder="Email">
           </div>
         </div>
         <div class="form-group">
-          <div class="col-sm-10">
+          <div class="col-sm-12">
+            <input type="text" class="form-control twitterhandle" id="twitterhandle" name="twitterhandle" placeholder="Twitter Handle">
+          </div>
+        </div>
+        <div class="form-group">
+          <div class="col-sm-12">
             <input type="password" class="form-control password" id="password" name="password" placeholder="Password">
           </div>
         </div>
 
         <div class="form-group">
-          <div class="col-sm-offset-0 col-sm-10">
+          <div class="col-sm-offset-0 col-sm-12">
             <button type="submit" class="btn btn-default">Sign Up</button>
           </div>
         </div>
