--- a/views/site/login.ejs
+++ b/views/site/login.ejs
@@ -1,21 +1,18 @@
 <%- include ../header.ejs %>
 
   
-<div class="row signup">
+<div class="row login">
   <section>
-    <div class="col-md-6 col-xs-12">
-      <p>Log in page<br/>Bacon ipsum dolor sit amet tenderloin porchetta pork chop pastrami 
-        corned beef kielbasa spare ribs beef ribs shoulder filet mignon.</p>
-    </div>
 
-    <div class="col-md-6 col-xs-12">
 
-      <h2>Your Profile</h2>
+    <div class="col-md-7 col-xs-12">
+
+      <h2>Login In</h2>
 
       <form class="form-horizontal" role="form" method="POST" action="/login">
         <div class="form-group">
           <div class="col-sm-10">
-            <input type="email" class="form-control" id="loginEmail" name="email" placeholder="Email">
+            <input type="email" class="form-control" id="loginEmail" name="email" placeholder="Email" autofocus>
           </div>
         </div>
         <div class="form-group">
@@ -31,6 +28,10 @@
         </div>
       </form>
       <a href="/">Not a user? Sign up now.</a>
+
+    </div>
+
+    <div class="col-md-5 col-xs-12">
 
     </div>
   </section>
