--- a/views/user/profile.ejs
+++ b/views/user/profile.ejs
@@ -6,11 +6,47 @@
 </div>
 <%  } else {%>
 
-  <p><%= user.dataValues.firstname %> <%= user.dataValues.lastname %></p> 
-  <p><a href="mailto:<%= user.dataValues.email %>"><%= user.dataValues.email %></a></p>
-  <p><a href="<%= user.dataValues.linkedin %>">LinkedIn</a></p>
-  <p><a href="http://www.twitter.com/<%= user.dataValues.twitterhandle %>">@<%= user.dataValues.twitterhandle %></a></p>
-  <p><%= user.dataValues.bio %></p>
+
+<div class="row profile">
+  <section>
+    <div class="col-md-6 col-xs-12">
+
+      <h1><%= user.dataValues.firstname %> <%= user.dataValues.lastname %></h1> 
+
+      
+      <% var photo=tweets[0].user.profile_image_url; %>
+      <% var photoSmall=photo.toString(); %>
+      <% var photoBig=photoSmall.split("_normal",1) + ".jpeg"; %>
+
+      <div class="top">
+        <img src="<%= photoBig %>" class="profile-pic"/>
+        <p class="email"><a href="mailto:<%= user.dataValues.email %>"><%= user.dataValues.email %></a></p>
+        <p><a href="<%= user.dataValues.linkedin %>"><%= user.dataValues.linkedin %></a></p>
+        <p><a href="http://www.twitter.com/<%= user.dataValues.twitterhandle %>">@<%= user.dataValues.twitterhandle %></a></p>
+      </div>
+
+      <div class="bottom">
+        <h4>Bio</h4>
+        <p><%= user.dataValues.bio %></p>
+        <h4>Sample Work</h4>
+        <p><%= user.dataValues.samplework %></p>
+      </div>
+
+    </div>
+
+    <div class="col-md-6 col-xs-12">
+      <h2>What's new with <a href="http://www.twitter.com/<%= user.dataValues.twitterhandle %>"><%= user.dataValues.firstname %></a></h2>
+      <ul class="tweet-stream">
+        <% for(i = 0; i < tweets.length; i++) { %>
+          <li class="tweet">
+            <p><a href="http://twitter.com/<%= tweets[0].user.screen_name %>/status/<%= tweets[i].id_str %>"><%= tweets[i].text %></a></p>
+          </li>
+        <% } %>
+      </ul>
+    </div>
+
+  </section>
+</div>
   
   <% } %>
   
