--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,11 +1,9 @@
 
     </div> <!-- End container fluid-->
 
-<a href="/logout" class="btn btn-default">Log out</a>
-
     <footer>
       <section>
-        <a href="/">Home</a>  | <a href="/login">Login</a> | <a href="/about">About</a>
+        <a href="/">Home</a>  | <a href="/about">About</a> | <a href="http://www.generalassemb.ly">GA</a>
       </section>
     </footer>
 
