--- a/views/headerOut.ejs
+++ b/views/headerOut.ejs
@@ -13,7 +13,7 @@
     <section>
       <a href="/" id="logo">GA Connect</a>
       <span class="right">
-        <a href="/logout">Log Out</a>
+        <a href="/login">Log In</a>
       </span>
     </section>
   </header>
