--- a/views/site/home.ejs
+++ b/views/site/home.ejs
@@ -5,9 +5,9 @@
   <section>
     <div class="col-md-6 col-xs-12">
       <h2>GA Connect</h2>
-      <a href="" class="btn btn-default">View All SF Students</a>
-      <a href="" class="btn btn-default">View All WDI</a>
-      <a href="" class="btn btn-default">View All UXDI</a>
+      <a href="/show/all" class="btn btn-default">View All SF Students</a>
+      <a href="/show/wdi" class="btn btn-default">View All WDI</a>
+      <a href="/show/uxdi" class="btn btn-default">View All UXDI</a>
 
       <h2>Your Profile</h2>
       <a href="/user/<%= id %>" class="btn btn-default">View Your Profile</a>
