--- a/views/site/about.ejs
+++ b/views/site/about.ejs
@@ -3,9 +3,16 @@
   <div class="row">
     <section>
       <div class="col-md-4 col-xs-12"></div>
-      <div class="col-md-8 col-xs-12">Bacon ipsum dolor sit amet t-bone pork loin tongue fatback cow ham hock short loin chuck brisket swine drumstick leberkas. Landjaeger prosciutto t-bone pancetta, tri-tip porchetta bresaola beef ribs turkey. Shankle prosciutto strip steak meatball jerky. Fatback rump t-bone kielbasa shank. Tail capicola kielbasa, chuck shank boudin chicken ball tip shoulder hamburger cow ribeye ham hock.
+      <div class="col-md-8 col-xs-12">
+        <h2>A couple beers and an idea</h2>
+        <p>GA Connect was dreamed up while talking to UXDI students at a GA happy hour. Us WDI students were curious about their projects, and the great things that they were making. After chatting a while we started to imagine what it would be like if we had a way to connect with other GA Immersive students outside of happy hours.</p>
 
-  Ham hock turducken venison ribeye, jerky sirloin andouille strip steak prosciutto. Ham hock frankfurter t-bone, capicola porchetta tenderloin pork chop biltong jowl landjaeger rump pastrami short loin drumstick. Ribeye turkey tenderloin pancetta. Corned beef bacon kielbasa tri-tip t-bone tenderloin pork belly chicken. Shank tri-tip tail jerky leberkas andouille. Pork chop t-bone frankfurter swine jerky tri-tip brisket short ribs shank doner porchetta pig. Strip steak pork chop beef jowl, sausage bacon pork belly andouille sirloin jerky porchetta tail tri-tip venison rump.</div>
+        <p>What if there were a tool where you could learn more about other students? Where you could read about their background and see samples of their work? How great of a reference would that be if you needed help on a future project. With these questions in mind, I decided to build GA Connect for my first WDI project.</p>
+
+        <h2>Process</h2>
+        <p>This project was a huge learning experience for me. In the weeks leading up to project week I had been really sick, and fell behind on the authentication/authorization assignments. My first goal (after getting my API working of course) was to implement sign up and login. It took almost a whole day, a lot of time reviewing lecture notes, and a lot of q me bots, but I got it working!</p>
+        <p>-Steph Monette</p>
+      </div>
 </section>
   </div>
 <%- include ../footer.ejs %>
