--- a/views/site/about.ejs
+++ b/views/site/about.ejs
@@ -2,8 +2,10 @@
 
   <div class="row">
     <section>
-      <div class="col-md-4 col-xs-12"></div>
-      <div class="col-md-8 col-xs-12">
+      <div class="col-md-4 col-sm-12">
+        <img src="/images/project1.jpg" style="width:100%; margin-top:20px;"/>
+      </div>
+      <div class="col-md-8 col-sm-12">
         <h2>A couple beers and an idea</h2>
         <p>GA Connect was dreamed up while talking to UXDI students at a GA happy hour. Us WDI students were curious about their projects, and the great things that they were making. After chatting a while we started to imagine what it would be like if we had a way to connect with other GA Immersive students outside of happy hours.</p>
 
