getting all users to display, OMG

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -115,5 +115,5 @@ ul.tweet-stream{
 .directory li {
   list-style: none;
   padding: 15px;
-  border-top: 1px solid #ccc;
-}
+/*  border-top: 1px solid #ccc;
+*/}
