--- a/views/site/about.ejs
+++ b/views/site/about.ejs
@@ -1,6 +1,6 @@
 <%- include ../header.ejs %>
 
-  <div class="row">
+  <div class="row content">
     <section>
       <div class="col-md-4 col-sm-12">
         <img src="/images/project1.jpg" style="width:100%; margin-top:20px;"/>
