--- a/views/site/home.ejs
+++ b/views/site/home.ejs
@@ -1,7 +1,7 @@
 <%- include ../header.ejs %>
 
   
-<div class="row home">
+<div class="row content home">
   <section>
     <div class="col-md-6 col-xs-12">
       <h2>GA Connect</h2>
