--- a/views/site/index.ejs
+++ b/views/site/index.ejs
@@ -1,7 +1,7 @@
 <%- include ../headerOut.ejs %>
 
   
-<div class="row signup">
+<div class="row content signup">
   <section>
     <div class="col-md-5 col-xs-12">
         <h1>Connect with past<br> &amp; present SF GA students.</h1> 
