--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -8,7 +8,18 @@ body {
   line-height: 20px;
   color: #222222;
   background-color: #ececec;
+  background-image: url('/images/gears.png');
+  background-repeat: repeat;
 }
+.main {
+  min-height: 680px;
+}
+.row.content {
+    background-color: white;
+    border-bottom: 2px solid #ccc;
+    padding-bottom: 30px;
+}
+
 a {
   text-decoration: none;
   color: #222222;
@@ -16,7 +27,6 @@ a {
 a:hover{
   color: #fa4542;
 }
-
 
 section {
   max-width: 960px;
@@ -33,10 +43,19 @@ header, footer {
 
 footer {
   text-align: center;
+  padding-top: 25px;
+}
+footer a {
+  display: inline-block;
+  padding: 0 20px;
+  font-size: 18px;
 }
 header a, 
 footer a {
   color: #ececec;
+}
+header {
+  border-bottom: 2px solid #ccc;
 }
 header a#logo {
   background: url('/images/logo.jpg') 0 0 no-repeat;
@@ -48,19 +67,16 @@ header a#logo {
 header .right {
   float: right;
 }
-.main {
-  min-height: 700px;
-}
+
+
 
 
 /* Landing page */
 
 .signup {
-  background-color: white;
   padding: 10px 0 30px 0;
 }
 .login {
-  background-color: white;
   padding: 10px 0 30px 0;
 }
 
@@ -113,7 +129,16 @@ ul.tweet-stream{
   padding: 15px 0;
 }
 .directory li {
-  list-style: none;
+  list-style: none;;
+}
+.directory li.course {
+  border-top: 1px solid #ccc;
+}
+.directory li.course h3 {
+  margin-top: 15px;
+}
+.directory li.student span{
+  display:  inline-block;
+  margin-right: 10px;
   padding: 15px;
-/*  border-top: 1px solid #ccc;
-*/}
+}
