--- a/views/site/error.ejs
+++ b/views/site/error.ejs
@@ -1,6 +1,6 @@
 <%- include ../header.ejs %>
 
-  <div class="row">
+  <div class="row content">
     <section>
       <div class="col-md-2 col-xs-12"></div>
       <div class="col-md-8 col-xs-12">Whoops! Something went wrong. Head <a href="/">home</a>.</div>
