--- a/views/site/login.ejs
+++ b/views/site/login.ejs
@@ -1,17 +1,27 @@
 <%- include ../headerOut.ejs %>
 
   
-<div class="row login">
+<div class="row content login">
   <section>
 
     <div class="col-md-7 col-xs-12">
 
       <h2>Login In</h2>
 
+      <% if (message) { %>
+      <div class="alert alert-warning">
+        <%= message %>
+      </div>
+      <% } else {%>
+      <div class="alert alert-warning">
+        Log in now!
+      </div>
+      <% } %>
+
       <form class="form-horizontal" role="form" method="POST" action="/login">
         <div class="form-group">
           <div class="col-sm-10">
-            <input type="email" class="form-control" id="loginEmail" name="email" placeholder="Email" autofocus>
+            <input type="email" class="form-control" id="loginEmail" name="email" value="<%= email %>" placeholder="Email" autofocus>
           </div>
         </div>
         <div class="form-group">
