--- a/views/user/edit.ejs
+++ b/views/user/edit.ejs
@@ -6,7 +6,7 @@
 </div>
 <%  } else {%>
   
-<div class="row">
+<div class="row content">
   <section>
 
     <div class="col-md-7 col-xs-12">
@@ -17,13 +17,13 @@
 
         <div class="form-group">
           <div class="col-sm-12">
-            <input class="form-control" id="disabledInput" type="text" value="<%= firstname %>" disabled>
+            <input class="form-control" id="disabledInput" type="text" name="firstname" value="<%= firstname %>" disabled>
           </div>
         </div>
 
         <div class="form-group">
           <div class="col-sm-12">
-            <input class="form-control" id="disabledInput" type="text" value="<%= lastname %>" disabled>
+            <input class="form-control" id="disabledInput" type="text" name="lastname" value="<%= lastname %>" disabled>
           </div>
         </div>
 
@@ -35,8 +35,8 @@
 
         <div class="form-group">
           <div class="col-sm-12">
-            <select name="courseid" class="form-control">
-              <option value="<%= courseid %>" disabled selected><%= course %></option>
+            <select name="courseId" class="form-control">
+              <option value="<%= courseId %>" disabled selected><%= course %></option>
               <option value="8">WDI - January 2014</option>
               <option value="3">WDI - April 2014</option>
               <option value="1">WDI - July 2014</option>
