--- a/views/site/index.ejs
+++ b/views/site/index.ejs
@@ -4,7 +4,7 @@
 <div class="row content signup">
   <section>
     <div class="col-md-5 col-xs-12">
-        <h1>Connect with past<br> &amp; present SF GA students.</h1> 
+        <h1>Connect with past &amp; present SF GA students.</h1> 
         <p>Get in touch with members of your cohort, or find someone to collaborate on a project with.</p>
     </div>
 
