--- a/views/site/error.ejs
+++ b/views/site/error.ejs
@@ -3,7 +3,12 @@
   <div class="row content">
     <section>
       <div class="col-md-2 col-xs-12"></div>
-      <div class="col-md-8 col-xs-12">Whoops! Something went wrong. Head <a href="/">home</a>.</div>
+      <div class="col-md-8 col-xs-12">
+        <h1>Oh no!</h1> 
+        <p>Something went wrong! <a href="/">Go home</a>.</p>
+
+        <img src="images/taco.png" style="width:100%;"/>
+      </div>
       <div class="col-md-2 col-xs-12"></div>
     </section>
   </div>
