--- a/views/site/error.ejs
+++ b/views/site/error.ejs
@@ -5,7 +5,8 @@
       <div class="col-md-2 col-xs-12"></div>
       <div class="col-md-8 col-xs-12">
         <h1>Oh no!</h1> 
-        <p>Something went wrong! <a href="/">Go home</a>.</p>
+        <p>Something went wrong! But, at least we have tacos?</p>
+        <p><a href="/" class="btn btn-default">Go home</a>.</p>
 
         <img src="images/taco.png" style="width:100%;"/>
       </div>
