--- a/views/user/edit.ejs
+++ b/views/user/edit.ejs
@@ -80,7 +80,7 @@
         </div>
         <div class="form-group">
           <div class="col-sm-12">
-            <button type="submit" class="btn btn-default">Edit</button>
+            <button type="submit" class="btn btn-default">Save!</button>
           </div>
         </div>
       </form>
