--- a/views/user/profile.ejs
+++ b/views/user/profile.ejs
@@ -13,6 +13,7 @@
 
       <h1><%= user.dataValues.firstname %> <%= user.dataValues.lastname %></h1> 
 
+                  <% console.log("ALL TWEETS!!! profile: " + tweets); %>
 
       <div class="top">
 
