--- a/views/user/profile.ejs
+++ b/views/user/profile.ejs
@@ -13,14 +13,14 @@
 
       <h1><%= user.dataValues.firstname %> <%= user.dataValues.lastname %></h1> 
 
-                  <% console.log("TWEETS profile: "; %>
-                  <% console.log(tweets); %>
-                  
-                  <% console.log("TWEETS[0] : "); %>
-                  <% console.log(tweets[0]); %>
+                  <% console.log("TWEETS profile: " %>
+                  <% console.log(tweets) %>
 
-                  <% console.log("TWEETS[0].user : "); %>
-                  <% console.log(tweets[0].user); %>
+                  <% console.log("TWEETS[0] : ") %>
+                  <% console.log(tweets[0]) %>
+
+                  <% console.log("TWEETS[0].user : ") %>
+                  <% console.log(tweets[0].user) %>
 
       <div class="top">
 
