--- a/views/user/profile.ejs
+++ b/views/user/profile.ejs
@@ -15,7 +15,7 @@
 
       <div class="top">
 
-        <% if ((user.dataValues.twitterhandle) && (tweets !== false)) { %>
+        <% if ((user.dataValues.twitterhandle) && (tweets[0].user)) { %>
           <% var photoBig=tweets[0].user.profile_image_url.toString().replace(/_normal/,"") %>
           <img src="<%= photoBig %>" class="profile-pic"/>
         <% } else { %>
@@ -27,7 +27,7 @@
            <p><a href="<%= user.dataValues.linkedin %>">LinkedIn</a></p>
         <% } %>
 
-        <% if ((user.dataValues.twitterhandle) && (tweets !== false)) { %>
+        <% if ((user.dataValues.twitterhandle) && (tweets[0].user)) { %>
            <p><a href="http://www.twitter.com/<%= user.dataValues.twitterhandle %>">@<%= user.dataValues.twitterhandle %></a></p>
         <% } %>
 
@@ -56,7 +56,7 @@
     </div>
 
     <div class="col-md-5 col-xs-12">
-        <% if ((user.dataValues.twitterhandle) && (tweets !== false)) { %>
+        <% if ((user.dataValues.twitterhandle) && (tweets[0].user)) { %>
             <h3>What's new with <a href="http://www.twitter.com/<%= user.dataValues.twitterhandle %>"><%= user.dataValues.firstname %></a></h3>
             <ul class="tweet-stream">
               <% for(i = 0; i < tweets.length; i++) { %>
