--- a/views/user/edit.ejs
+++ b/views/user/edit.ejs
@@ -59,7 +59,7 @@
            
            <div class="input-group">
               <div class="input-group-addon">@</div>
-              <input type="text" class="form-control twitterhandle" id="twitterhandle" name="twitterhandle" value="<%= twitterhandle %>"placeholder="Twitter Handle">
+              <input type="text" class="form-control twitterhandle" id="twitterhandle" name="twitterhandle" value="<%= twitterhandle %>"placeholder="Twitter Handle (Public Accounts Only)">
             </div>
           </div>
         </div>
