--- a/views/site/index.ejs
+++ b/views/site/index.ejs
@@ -60,7 +60,7 @@
            
            <div class="input-group">
               <div class="input-group-addon">@</div>
-              <input type="text" class="form-control twitterhandle" id="twitterhandle" name="twitterhandle" placeholder="Twitter Handle">
+              <input type="text" class="form-control twitterhandle" id="twitterhandle" name="twitterhandle" placeholder="Twitter Handle (Public Accounts Only)">
             </div>
           </div>
         </div>
