--- a/views/site/index.ejs
+++ b/views/site/index.ejs
@@ -55,6 +55,23 @@
           </div>
         </div>
 
+          <div class="form-group">
+          <div class="col-sm-12">
+            <select name="courseId" class="form-control">
+              <option value="" disabled selected>Select Your Cohort</option>
+              <option value="8">WDI - January 2014</option>
+              <option value="3">WDI - April 2014</option>
+              <option value="1">WDI - July 2014</option>
+              <option value="2">WDI - August 2014</option>
+              <option value="5">WDI - November 2014</option>
+              <option value="7">UXDI - March 2014</option>
+              <option value="3">UXDI - June 2014</option>
+              <option value="4">UXDI - September 2014</option>
+            </select>
+          </div>
+        </div>
+
+
         <div class="form-group">
           <div class="col-sm-12">
            
