--- a/views/site/304.ejs
+++ b/views/site/304.ejs
@@ -9,7 +9,7 @@
         <p>Are you sure your handle is public?</p>
         <p><a href="/" class="btn btn-default">Go home</a>.</p>
 
-        <img src="images/taco.png" style="width:100%;"/>
+        <img src="images/taco.jpg" style="width:100%;"/>
       </div>
       <div class="col-md-2 col-xs-12"></div>
     </section>
