--- a/views/site/404.ejs
+++ b/views/site/404.ejs
@@ -8,7 +8,7 @@
         <p>Something went wrong! But, at least we have tacos?</p>
         <p><a href="/" class="btn btn-default">Go home</a>.</p>
 
-        <img src="images/taco.png" style="width:100%;"/>
+        <img src="images/taco.jpg" style="width:100%;"/>
       </div>
       <div class="col-md-2 col-xs-12"></div>
     </section>
