--- a/views/site/304.ejs
+++ b/views/site/304.ejs
@@ -6,7 +6,7 @@
       <div class="col-md-8 col-xs-12">
         <h1>Whoa there!</h1> 
         <p>Something is wrong with your twitter handle!</p>
-        <p>Are you sure your handle is public?</p>
+        <p>Are you sure your twitter handle is public?</p>
         <p><a href="/" class="btn btn-default">Go home</a>.</p>
 
         <img src="images/taco.jpg" style="width:100%;"/>
