--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -104,6 +104,7 @@ ul.tweet-stream{
   margin: 10px 20px 10px 0;
   border-radius: 50%;
   height: 150px;
+  border: 1px solid #ccc;
 }
 
 .profile .top {
