--- a/views/site/about.ejs
+++ b/views/site/about.ejs
@@ -6,7 +6,7 @@
         <img src="/images/project1.jpg" style="width:100%; margin-top:20px;"/>
       </div>
       <div class="col-md-8 col-sm-12">
-        <h2>A couple beers and an idea</h2>
+        <h2>Idea</h2>
         <p>GA Connect was dreamed up while talking to UXDI students at a GA happy hour. Us WDI students were curious about their projects, and the great things that they were making. After chatting a while we started to imagine what it would be like if we had a way to connect with other GA Immersive students outside of happy hours.</p>
 
         <p>What if there were a tool where you could learn more about other students? Where you could read about their background and see samples of their work? How great of a reference would that be if you needed help on a future project. With these questions in mind, I decided to build GA Connect for my first WDI project.</p>
